shoppingcart/minikube/manifests/eureka.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  type: ClusterIP
  selector:
    component: eureka
  ports:
    - port: 8761
      name: eureka
      targetPort: 8761

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      component: eureka
  template:
    metadata:
      labels:
        component: eureka
    spec:
      containers:
        - name: eureka
          image: docker.io/library/eureka:latest
          imagePullPolicy: Never #Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/eureka/target/eureka-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8761
