shoppingcart/minikube/manifests/order.yml
apiVersion: v1
kind: Service
metadata:
  name: order-0
spec:
  type: ClusterIP
  selector:
    component: order-0
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-0
  template:
    metadata:
      labels:
        component: order-0
    spec:
      containers:
        - name: order-0
          image: order:latest
          imagePullPolicy: Never #Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/order/target/order-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: order-1
spec:
  type: ClusterIP
  selector:
    component: order-1
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-1
  template:
    metadata:
      labels:
        component: order-1
    spec:
      containers:
        - name: order-1
          image: order:latest
          imagePullPolicy: Never #Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/order/target/order-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
