shoppingcart/minikube/manifests/orderwrapper.yml
apiVersion: v1
kind: Service
metadata:
  name: orderwrapper
spec:
  type: ClusterIP
  selector:
    component: orderwrapper
  ports:
    - port: 8080
      name: http
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderwrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      component: orderwrapper
  template:
    metadata:
      labels:
        component: orderwrapper
    spec:
      containers:
        - name: orderwrapper
          image: orderwrapper:latest
          imagePullPolicy: Never #Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/orderwrapper/target/orderwrapper-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
