shoppingcart/minikube/manifests/payment.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-0
spec:
  type: ClusterIP
  selector:
    component: payment-0
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payment-0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment-0
  serviceName: "payment-0"
  template:
    metadata:
      labels:
        component: payment-0
    spec:
      containers:
        - name: payment-0
          image: payment:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/payment/target/payment-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-1
spec:
  type: ClusterIP
  selector:
    component: payment-1
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment-1
  serviceName: "payment-1"
  template:
    metadata:
      labels:
        component: payment-1
    spec:
      containers:
        - name: payment-1
          image: payment:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/payment/target/payment-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
