shoppingcart/minikube/manifests/stockwrapper.yml
apiVersion: v1
kind: Service
metadata:
  name: stockwrapper
spec:
  type: ClusterIP
  selector:
    component: stockwrapper
  ports:
    - port: 8080
      name: http
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockwrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stockwrapper
  template:
    metadata:
      labels:
        component: stockwrapper
    spec:
      containers:
        - name: stockwrapper
          image: stockwrapper:latest
          imagePullPolicy: Never #Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          command: ["java"]
          args: ["-jar", "/srv/stockwrapper/target/stockwrapper-1.0-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
