shoppingcart/minikube/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
      paths:
        - path: /orders/?(.*)
          pathType: Prefix
          backend:
            service:
              name: orderwrapper
              port:
                number: 8080
        - path: /stock/?(.*)
          pathType: Prefix
          backend:
            service:
              name: stockwrapper
              port:
                number: 8080
        - path: /payment/?(.*)
          pathType: Prefix
          backend:
            service:
              name: paymentwrapper
              port:
                number: 8080
